// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Heading should render styles for size lg 1`] = `
.c0 {
  margin-top: 0;
  margin-bottom: 0;
  color: #4A4A4A;
  font-size: 28px;
  font-weight: 500;
  line-height: calc(34 / 28);
  font-family: 'Cabin',sans-serif;
}

@media (min-width:46.0625em) {
  .c0 {
    font-size: 37px;
    line-height: calc(40/37);
  }
}

<HeadingTag
  className="c0"
  size="lg"
  theme={
    Object {
      "breakpoints": Object {
        "desktop": "64.0625em",
        "mobile": 0,
        "tablet": "46.0625em",
      },
      "colors": Object {
        "alert": Object {
          "error": "#FF1C4A",
          "error.dark": "#C81035",
          "error.light": "#FAEEF1",
          "info": "#488BD9",
          "info.dark": "#245792",
          "info.light": "#F1F4F8",
          "success": "#4EC000",
          "success.dark": "#378A00",
          "success.light": "#F1F7ED",
          "warn": "#F5A623",
          "warn.dark": "#B87000",
          "warn.light": "#F9F5EF",
        },
        "brand": Object {
          "primary": "#00C0A5",
          "primary.dark": "#008C7A",
          "primary.light": "#EDF7F5",
          "primary.medium": "#9DF2E7",
          "quaternary": "#1A1918",
          "secondary": "#11564C",
          "secondary.dark": "#0C3D36",
          "secondary.light": "#EEF1F1",
          "secondary.medium": "#21A390",
          "tertiary": "#FF7063",
          "tertiary.dark": "#C31C0D",
          "tertiary.light": "#FFDFDC",
          "tertiary.medium": "#FF9F96",
        },
        "shade": Array [
          "#000000",
          "#4A4A4A",
          "#888888",
          "#AAAAAA",
          "#CCCCCC",
          "#DDDDDD",
          "#F7F7F7",
          "#FAFAFA",
          "#FFFFFF",
        ],
      },
      "container": Object {
        "width": "1024px",
      },
      "spacing": Object {
        "0": 0,
        "1": "4px",
        "2": "8px",
        "3": "16px",
        "4": "24px",
        "5": "64px",
        "6": "80px",
      },
      "typography": Object {
        "body": Object {
          "fontFamily": "'Open Sans', sans-serif",
        },
        "heading": Object {
          "fontFamily": "'Cabin', sans-serif",
        },
      },
    }
  }
/>
`;

exports[`Heading should render styles for size md 1`] = `
.c0 {
  margin-top: 0;
  margin-bottom: 0;
  color: #4A4A4A;
  font-size: 22px;
  font-weight: 500;
  line-height: calc(28 / 22);
  font-family: 'Cabin',sans-serif;
}

@media (min-width:46.0625em) {
  .c0 {
    font-size: 28px;
    line-height: calc(32/28);
  }
}

<HeadingTag
  className="c0"
  size="md"
  theme={
    Object {
      "breakpoints": Object {
        "desktop": "64.0625em",
        "mobile": 0,
        "tablet": "46.0625em",
      },
      "colors": Object {
        "alert": Object {
          "error": "#FF1C4A",
          "error.dark": "#C81035",
          "error.light": "#FAEEF1",
          "info": "#488BD9",
          "info.dark": "#245792",
          "info.light": "#F1F4F8",
          "success": "#4EC000",
          "success.dark": "#378A00",
          "success.light": "#F1F7ED",
          "warn": "#F5A623",
          "warn.dark": "#B87000",
          "warn.light": "#F9F5EF",
        },
        "brand": Object {
          "primary": "#00C0A5",
          "primary.dark": "#008C7A",
          "primary.light": "#EDF7F5",
          "primary.medium": "#9DF2E7",
          "quaternary": "#1A1918",
          "secondary": "#11564C",
          "secondary.dark": "#0C3D36",
          "secondary.light": "#EEF1F1",
          "secondary.medium": "#21A390",
          "tertiary": "#FF7063",
          "tertiary.dark": "#C31C0D",
          "tertiary.light": "#FFDFDC",
          "tertiary.medium": "#FF9F96",
        },
        "shade": Array [
          "#000000",
          "#4A4A4A",
          "#888888",
          "#AAAAAA",
          "#CCCCCC",
          "#DDDDDD",
          "#F7F7F7",
          "#FAFAFA",
          "#FFFFFF",
        ],
      },
      "container": Object {
        "width": "1024px",
      },
      "spacing": Object {
        "0": 0,
        "1": "4px",
        "2": "8px",
        "3": "16px",
        "4": "24px",
        "5": "64px",
        "6": "80px",
      },
      "typography": Object {
        "body": Object {
          "fontFamily": "'Open Sans', sans-serif",
        },
        "heading": Object {
          "fontFamily": "'Cabin', sans-serif",
        },
      },
    }
  }
/>
`;

exports[`Heading should render styles for size sm 1`] = `
.c0 {
  margin-top: 0;
  margin-bottom: 0;
  color: #4A4A4A;
  font-size: 18px;
  font-weight: 500;
  line-height: calc(24 / 18);
  font-family: 'Cabin',sans-serif;
}

@media (min-width:46.0625em) {
  .c0 {
    font-size: 22px;
    line-height: calc(28/22);
  }
}

<HeadingTag
  className="c0"
  size="sm"
  theme={
    Object {
      "breakpoints": Object {
        "desktop": "64.0625em",
        "mobile": 0,
        "tablet": "46.0625em",
      },
      "colors": Object {
        "alert": Object {
          "error": "#FF1C4A",
          "error.dark": "#C81035",
          "error.light": "#FAEEF1",
          "info": "#488BD9",
          "info.dark": "#245792",
          "info.light": "#F1F4F8",
          "success": "#4EC000",
          "success.dark": "#378A00",
          "success.light": "#F1F7ED",
          "warn": "#F5A623",
          "warn.dark": "#B87000",
          "warn.light": "#F9F5EF",
        },
        "brand": Object {
          "primary": "#00C0A5",
          "primary.dark": "#008C7A",
          "primary.light": "#EDF7F5",
          "primary.medium": "#9DF2E7",
          "quaternary": "#1A1918",
          "secondary": "#11564C",
          "secondary.dark": "#0C3D36",
          "secondary.light": "#EEF1F1",
          "secondary.medium": "#21A390",
          "tertiary": "#FF7063",
          "tertiary.dark": "#C31C0D",
          "tertiary.light": "#FFDFDC",
          "tertiary.medium": "#FF9F96",
        },
        "shade": Array [
          "#000000",
          "#4A4A4A",
          "#888888",
          "#AAAAAA",
          "#CCCCCC",
          "#DDDDDD",
          "#F7F7F7",
          "#FAFAFA",
          "#FFFFFF",
        ],
      },
      "container": Object {
        "width": "1024px",
      },
      "spacing": Object {
        "0": 0,
        "1": "4px",
        "2": "8px",
        "3": "16px",
        "4": "24px",
        "5": "64px",
        "6": "80px",
      },
      "typography": Object {
        "body": Object {
          "fontFamily": "'Open Sans', sans-serif",
        },
        "heading": Object {
          "fontFamily": "'Cabin', sans-serif",
        },
      },
    }
  }
/>
`;

exports[`Heading should render styles for size xl 1`] = `
.c0 {
  margin-top: 0;
  margin-bottom: 0;
  color: #4A4A4A;
  font-size: 37px;
  font-weight: bold;
  line-height: calc(40 / 37);
  font-family: 'Cabin',sans-serif;
}

@media (min-width:46.0625em) {
  .c0 {
    font-size: 46px;
    line-height: calc(50/46);
  }
}

<HeadingTag
  className="c0"
  size="xl"
  theme={
    Object {
      "breakpoints": Object {
        "desktop": "64.0625em",
        "mobile": 0,
        "tablet": "46.0625em",
      },
      "colors": Object {
        "alert": Object {
          "error": "#FF1C4A",
          "error.dark": "#C81035",
          "error.light": "#FAEEF1",
          "info": "#488BD9",
          "info.dark": "#245792",
          "info.light": "#F1F4F8",
          "success": "#4EC000",
          "success.dark": "#378A00",
          "success.light": "#F1F7ED",
          "warn": "#F5A623",
          "warn.dark": "#B87000",
          "warn.light": "#F9F5EF",
        },
        "brand": Object {
          "primary": "#00C0A5",
          "primary.dark": "#008C7A",
          "primary.light": "#EDF7F5",
          "primary.medium": "#9DF2E7",
          "quaternary": "#1A1918",
          "secondary": "#11564C",
          "secondary.dark": "#0C3D36",
          "secondary.light": "#EEF1F1",
          "secondary.medium": "#21A390",
          "tertiary": "#FF7063",
          "tertiary.dark": "#C31C0D",
          "tertiary.light": "#FFDFDC",
          "tertiary.medium": "#FF9F96",
        },
        "shade": Array [
          "#000000",
          "#4A4A4A",
          "#888888",
          "#AAAAAA",
          "#CCCCCC",
          "#DDDDDD",
          "#F7F7F7",
          "#FAFAFA",
          "#FFFFFF",
        ],
      },
      "container": Object {
        "width": "1024px",
      },
      "spacing": Object {
        "0": 0,
        "1": "4px",
        "2": "8px",
        "3": "16px",
        "4": "24px",
        "5": "64px",
        "6": "80px",
      },
      "typography": Object {
        "body": Object {
          "fontFamily": "'Open Sans', sans-serif",
        },
        "heading": Object {
          "fontFamily": "'Cabin', sans-serif",
        },
      },
    }
  }
/>
`;

exports[`Heading should render styles for size xs 1`] = `
.c0 {
  margin-top: 0;
  margin-bottom: 0;
  color: #4A4A4A;
  font-size: 15px;
  font-weight: 500;
  line-height: calc(20 / 15);
  font-family: 'Cabin',sans-serif;
}

@media (min-width:46.0625em) {
  .c0 {
    font-size: 18px;
    line-height: calc(24/18);
  }
}

<HeadingTag
  className="c0"
  size="xs"
  theme={
    Object {
      "breakpoints": Object {
        "desktop": "64.0625em",
        "mobile": 0,
        "tablet": "46.0625em",
      },
      "colors": Object {
        "alert": Object {
          "error": "#FF1C4A",
          "error.dark": "#C81035",
          "error.light": "#FAEEF1",
          "info": "#488BD9",
          "info.dark": "#245792",
          "info.light": "#F1F4F8",
          "success": "#4EC000",
          "success.dark": "#378A00",
          "success.light": "#F1F7ED",
          "warn": "#F5A623",
          "warn.dark": "#B87000",
          "warn.light": "#F9F5EF",
        },
        "brand": Object {
          "primary": "#00C0A5",
          "primary.dark": "#008C7A",
          "primary.light": "#EDF7F5",
          "primary.medium": "#9DF2E7",
          "quaternary": "#1A1918",
          "secondary": "#11564C",
          "secondary.dark": "#0C3D36",
          "secondary.light": "#EEF1F1",
          "secondary.medium": "#21A390",
          "tertiary": "#FF7063",
          "tertiary.dark": "#C31C0D",
          "tertiary.light": "#FFDFDC",
          "tertiary.medium": "#FF9F96",
        },
        "shade": Array [
          "#000000",
          "#4A4A4A",
          "#888888",
          "#AAAAAA",
          "#CCCCCC",
          "#DDDDDD",
          "#F7F7F7",
          "#FAFAFA",
          "#FFFFFF",
        ],
      },
      "container": Object {
        "width": "1024px",
      },
      "spacing": Object {
        "0": 0,
        "1": "4px",
        "2": "8px",
        "3": "16px",
        "4": "24px",
        "5": "64px",
        "6": "80px",
      },
      "typography": Object {
        "body": Object {
          "fontFamily": "'Open Sans', sans-serif",
        },
        "heading": Object {
          "fontFamily": "'Cabin', sans-serif",
        },
      },
    }
  }
/>
`;
